// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderBreadcrumbs renders updates to the breadcrumbs$ observable 1`] = `
<li
  className="euiBreadcrumb euiBreadcrumb--last"
  key="0"
>
  <EuiInnerText>
    <span
      aria-current="page"
      className="euiBreadcrumb__content"
      data-test-subj="breadcrumb first last"
      title="First"
    >
      First
    </span>
  </EuiInnerText>
</li>
`;

exports[`HeaderBreadcrumbs renders updates to the breadcrumbs$ observable 2`] = `
Array [
  <li
    className="euiBreadcrumb"
    key="0"
  >
    <EuiInnerText>
      <span
        className="euiBreadcrumb__content"
        data-test-subj="breadcrumb first"
        title="First"
      >
        First
      </span>
    </EuiInnerText>
  </li>,
  <li
    className="euiBreadcrumb euiBreadcrumb--last"
    key="1"
  >
    <EuiInnerText>
      <span
        aria-current="page"
        className="euiBreadcrumb__content"
        data-test-subj="breadcrumb last"
        title="Second"
      >
        Second
      </span>
    </EuiInnerText>
  </li>,
]
`;

exports[`HeaderBreadcrumbs renders updates to the breadcrumbs$ observable 3`] = `
<li
  className="euiBreadcrumb euiBreadcrumb--last"
  key="0"
>
  <EuiInnerText>
    <span
      aria-current="page"
      className="euiBreadcrumb__content"
      data-test-subj="breadcrumb first"
      title="First"
    >
      Kibana
    </span>
  </EuiInnerText>
</li>
`;
